--- a/style.css
+++ b/style.css
@@ -1,4 +1,82 @@
 @charset "UTF-8";
 
+/* $breakpoints: (
+  'sm': (min-width: 768px),
+  'md': (min-width: 1024px),
+  'lg': (min-width: 1280px)
+) */
+
+
 /* 共通部分
 ------------------------------- */
+html {
+  font-size: 100%;
+}
+
+body {
+  color: #0C141E
+}
+
+.wrapper {
+  width: 100%;
+  height: auto;
+  max-width: 1200px;
+  margin: 0 auto;
+  border: 1px solid red;
+}
+
+/* header
+------------------------------- */
+.header {
+  display: flex;
+  justify-content: space-between;
+  height: calc(25vw * 0.75);
+  max-height: 117px;
+  border: 1px solid blue; /* 後で消す */
+}
+
+.header__image {
+  width: 70%;
+  max-width: 400px;
+  padding-left: 4%;
+}
+
+.header-btn {
+  width: 25%;
+  max-width: 180px;
+  background-color: #203354;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-btn__text {
+  font-size: min(5vw, 32px);
+  color: #FFFFFF;
+}
+
+.header-btn__icon {
+  width: 30%;
+  max-width: 52px;
+}
+
+/* min-width: 768px
+------------------------------- */
+@media (min-width:768px) {
+  /* header
+  ----------------------------- */
+  .header {
+    max-height: 90px;
+  }
+  .header__image {
+    max-width: 298px;
+  }
+  .header-btn__text {
+    font-size: 16px;
+  }
+  .header-btn__icon {
+    max-width: 20px;
+    margin-top: 9px;
+  }
+}
