--- a/style.css
+++ b/style.css
@@ -30,19 +30,16 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  height: calc(25vw * 0.75);
-  max-height: 117px;
+  height: 60px;
 }
 
 .header__image {
-  width: 70%;
-  max-width: 400px;
-  padding-left: 4%;
+  width: 200px;
+  margin: 12px 15px;
 }
 
 .header-btn {
-  width: 25%;
-  max-width: 180px;
+  width: 90px;
   background-color: #203354;
   display: flex;
   flex-direction: column;
@@ -51,13 +48,41 @@ body {
 }
 
 .header-btn__text {
-  font-size: min(5vw, 32px);
+  font-size: 16px;
   color: #FFFFFF;
 }
 
 .header-btn__icon {
-  width: 30%;
-  max-width: 52px;
+  position: relative;
+  width: 25px;
+  height: 25px;
+  box-sizing: border-box;
+}
+
+/* 三本線のスタイル */
+.header-btn__icon span {
+  display: block;
+  width: 25px;
+  height: 2px;
+  background: #FFFFFF;
+  position: absolute;
+  transition: all 0.5s ease;
+}
+
+/* 線の縦位置 */
+.header-btn__bar1 {
+  top: 5px;
+}
+.header-btn__bar2 {
+  bottom: 8px;
+}
+
+/* メニュークリック 線の位置 */
+.header-btn__bar1.open {
+  transform: translateY(5px) rotate(45deg);
+}
+.header-btn__bar2.open {
+  transform: translateY(-5px) rotate(-45deg);
 }
 
 /* MV
@@ -158,17 +183,16 @@ body {
   /* header
   ----------------------------- */
   .header {
-    max-height: 90px;
+    height: 90px;
   }
+
   .header__image {
-    max-width: 298px;
+    width: 300px;
+    margin: 20px 50px;
   }
-  .header-btn__text {
-    font-size: 16px;
-  }
-  .header-btn__icon {
-    max-width: 20px;
-    margin-top: 9px;
+
+  .header-btn {
+    width: 180px;
   }
 
   /* MV
