--- a/style.css
+++ b/style.css
@@ -107,11 +107,11 @@ body {
 }
 
 .nav__list {
+  width: 100%;
   list-style: none;
 }
 
 .nav__item {
-  width: 100%;
   padding: 15px 0;
 }
 
@@ -134,6 +134,10 @@ body {
   display: inline-block;
   font-size: 20px;
   text-align: right;
+}
+
+.nav__text span {
+  display: none;
 }
 
 /* MV
@@ -250,6 +254,46 @@ body {
   ----------------------------- */
   .nav {
     top: 90px;
+    height: 100px;
+  }
+
+  .nav__list {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+  }
+
+  .nav__item {
+    width: 25%;
+    padding: 0;
+  }
+
+  .nav__item::after {
+    display: none;
+  }
+
+  .nav__item + .nav__item {
+    border-left: 1px solid #E9E9E9;
+  }
+
+  .nav__item:hover {
+    background-color: #6692C1;
+  }
+
+  .nav__text {
+    width: 100%;
+    text-align: center;
+    padding: 8px 0;
+  }
+
+  .nav__text span {
+    display: block;
+    font-size: 16px;
+    margin-top: 10px;
+  }
+
+  .nav__text:hover {
+    color: #FFFFFF;
   }
 
   /* MV
