--- a/style.css
+++ b/style.css
@@ -164,14 +164,25 @@ body {
   content: "";
 }
 
-.mv__figure-group {
+.mv__title {
+  font-size: 32px;
+  color: #FFFFFF;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  white-space: nowrap;
+}
+
+.figure-group {
   position: absolute;
   bottom: 4%;
   left: 50%;
   transform: translate(-50%);
 }
 
-.mv__figure {
+.figure-group__figure {
   width: 71px;
   height: 71px;
   display: flex;
@@ -179,7 +190,7 @@ body {
   align-items: center;
 }
 
-.mv__figure::before {
+.figure-group__figure::before {
   content: "";
   position: absolute;
   display: block;
@@ -189,12 +200,12 @@ body {
   transform: rotate(-45deg);
 }
 
-.mv__text {
+.figure-group__text {
   font-size: 10px;
   color: #FFFFFF;
 }
 
-.mv__allow {
+.figure-group__allow {
   position: absolute;
   left: 10%;
   animation: arrowmove 1s ease-in-out infinite;
@@ -213,7 +224,7 @@ body {
 }
 
 /* 矢印の描写 */
-.mv__allow:before {
+.figure-group__allow:before {
   content: "";
   position: absolute;
   bottom: -15px;
@@ -224,7 +235,7 @@ body {
   transform: skewX(45deg);
 }
 
-.mv__allow:after{
+.figure-group__allow:after{
   content: "";
   position: absolute;
   bottom: -15px;
@@ -305,7 +316,16 @@ body {
   .mv {
     height: 540px;
   }
-  .mv__figure-group {
+
+  .mv__title {
+    font-size: 40px;
+  }
+
+  .br-sp {
+    display: none;
+  }
+
+  .figure-group {
     left: 88%;
   }
 }
