--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
   z-index: 10;
 }
 
-.is-open{
+.is-open {
   display: none;
 }
 
@@ -265,6 +265,10 @@ body {
   white-space: nowrap;
 }
 
+.br-flex {
+  display: none;
+}
+
 /* タイトルの図形 */
 .title__polygon {
   width: 0;
@@ -278,6 +282,7 @@ body {
 ------------------------------- */
 .catch {
   width: 100%;
+  height: auto;
   padding: 25px 15px;
   background-color: #E9E9E9;
 }
@@ -292,9 +297,9 @@ body {
 }
 
 .catch-group__image {
-  width: auto;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 230px;
+  object-fit: cover;
 }
 
 .catch-group__title {
@@ -307,6 +312,52 @@ body {
   font-size: 16px;
   line-height: 24px;
   text-align: justify;
+}
+
+/* info
+------------------------------- */
+.info {
+  height: 180px;
+  padding: 50px 0;
+}
+
+.info_color {
+  background-color: #6692C1;
+}
+
+.info__text {
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.info__link {
+  color: #0C141E;
+  text-decoration: none;
+}
+
+.info-btn {
+  display: flex;
+  background-image: url(images/allow.svg);
+  background-size: 40px;
+  background-position: 70% 50%;
+  border: 2px solid #0C141E;
+  margin: 0 62px;
+  padding: 10px;
+}
+
+.info-btn:hover {
+  color: #FFFFFF;
+  background-color: #0C141E;
+  background-image: url(images/allow_w.svg);
+}
+
+.info-btn__text {
+  width: 53%;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: end;
 }
 
 
@@ -399,6 +450,7 @@ body {
     justify-content: space-between;
     gap: 0 25px;
     padding: 25px 37px;
+    margin-bottom: 25px;
   }
 
   .catch-group {
@@ -407,8 +459,56 @@ body {
   }
 
   .catch-group__image {
+    height: 200px;
+  }
+
+  /* info
+  ----------------------------- */
+  .info-wrap {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+
+  .info {
     width: 100%;
-    height: auto;
-    object-fit: cover;
+    height: 203px;
+  }
+}
+
+/* min-width: 1024px
+------------------------------- */
+@media (min-width: 1024px) {
+  /* タイトル
+  ----------------------------- */
+  .title-wrap_flex {
+    width: 200px;
+    height: 430px;
+  }
+
+  .title-wrap_height {
+    height: 203px;
+  }
+
+  .br-flex {
+    display: block;
+  }
+
+  /* メインコンテンツ
+  ----------------------------- */
+  .contents {
+    display: flex;
+  }
+
+  .catch {
+    max-width: 1000px;
+    height: 430px;
+    padding: 25px;
+  }
+
+  /* info
+  ----------------------------- */
+  .info-wrap {
+    width: 1000px;
   }
 }
