--- a/style.css
+++ b/style.css
@@ -360,6 +360,29 @@ body {
   text-align: end;
 }
 
+/* post
+------------------------------- */
+.post {
+  width: 100%;
+  height: 568px;
+  background-color: #203354;
+  color: #FFFFFF;
+  padding: 25px 15px 50px;
+}
+
+.post__title {
+  font-size: 32px;
+  line-height: 48px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.post-group {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 15px;
+}
+
 
 /* min-width: 640px
 ------------------------------- */
@@ -473,6 +496,26 @@ body {
   .info {
     width: 100%;
     height: 203px;
+  }
+
+  /* post
+  ----------------------------- */
+  .post {
+    height: 418px;
+    padding: 50px 0;
+  }
+
+  .post__title {
+    margin-bottom: 50px;
+  }
+
+  .post-group {
+    display: flex;
+    justify-content: center;
+  }
+
+  .post-group__date {
+    margin-right: 12px;
   }
 }
 
