Fix news height

--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ body {
 ------------------------------- */
 .post {
   width: 100%;
-  height: 568px;
+  height: auto;
   background-color: #203354;
   color: #FFFFFF;
   padding: 25px 15px 50px;
