--- a/style.css
+++ b/style.css
@@ -353,11 +353,14 @@ body {
 
 .info-btn {
   display: flex;
+  align-items: center;
   background-image: url(images/allow.svg);
   background-size: 40px;
-  background-position: 70% 50%;
+  background-position: 75% 50%;
   border: 2px solid #0C141E;
-  margin: 0 62px;
+  width: 251px;
+  height: 44px;
+  margin: 0 auto;
   padding: 10px;
 }
 
@@ -368,7 +371,7 @@ body {
 }
 
 .info-btn__text {
-  width: 53%;
+  width: 60%;
   font-size: 16px;
   line-height: 24px;
   text-align: end;
@@ -526,6 +529,11 @@ body {
   .info {
     width: 100%;
     height: 203px;
+  }
+
+  .info-btn {
+    width: 238px;
+    height: 54px;
   }
 
   /* post
