--- a/style.css
+++ b/style.css
@@ -448,6 +448,64 @@ body {
   height: 400px;
 }
 
+/* contact
+------------------------------- */
+.form {
+  background-color: #E9E9E9;
+  padding: 50px 15px 25px;
+}
+
+.form__item {
+  margin-bottom: 12px;
+}
+
+.form__item_margin-bottom {
+  margin-bottom: 0;
+}
+
+.form__label {
+  display: block;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 8px;
+}
+
+.form__input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #C6C6C6;
+  padding: 8px;
+}
+
+.form__textarea {
+  width: 100%;
+  height: 200px;
+  border: 1px solid #C6C6C6;
+  padding: 8px;
+}
+
+.form-btn-wrap {
+  padding: 37px 0;
+}
+
+.form-btn {
+  display: flex;
+  align-items: center;
+  background-image: url(images/allow.svg);
+  background-size: 40px;
+  background-position: 75% 50%;
+  border: 2px solid #0C141E;
+  width: 251px;
+  height: 44px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.form-btn__text {
+  width: 60%;
+  text-align: end;
+}
+
 /* footer
 ------------------------------- */
 .footer-nav__md {
