--- a/style.css
+++ b/style.css
@@ -458,6 +458,43 @@ body {
   padding-left: 16px;
 }
 
+/* about
+------------------------------- */
+.about {
+  width: 100%;
+  height: auto;
+}
+
+.about-items {
+  width: 100%;
+  height: 232px;
+  padding: 25px 15px;
+}
+
+.about-items__image {
+  width: 100%;
+  height: 250px;
+  background-image: url(images/consul.jpg);
+  background-size: cover;
+}
+
+.about-items_bg_01 {
+  background-color: #6692C1;
+}
+
+.about-items_bg_02 {
+  background-color: #90C2EB;
+}
+
+.about__title {
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 700;
+  border-bottom: 1px solid #FFFFFF;
+  margin-bottom: 12px;
+  padding-bottom: 12px;
+}
+
 /* map
 ------------------------------- */
 .map {
@@ -748,6 +785,30 @@ body {
     margin-bottom: 0;
   }
 
+  /* about
+  ----------------------------- */
+  .about {
+    display: flex;
+  }
+
+  .about-items {
+    width: 100%;
+    height: auto;
+    padding: 25px;
+  }
+
+  .about-items__image {
+    height: 256px;
+  }
+
+  .about-items_bg_reverse01 {
+    background-color: #90C2EB;
+  }
+  
+  .about-items_bg_reverse02 {
+    background-color: #6692C1;
+  }
+
   /* contact
   ----------------------------- */
   .form {
@@ -870,6 +931,14 @@ body {
   ----------------------------- */
   .post-wrap_width {
     max-width: 1100px;
+  }
+
+  /* about
+  ----------------------------- */
+  .about-items {
+    width: 100%;
+    height: 231px;
+    padding: 25px 15px;
   }
 
   /* footer
